--- a/Assignment1.html
+++ b/Assignment1.html
@@ -12,7 +12,7 @@
                 <tr>
                     <th>Class</th>
                     <th> Current Level</th>
-        
+                    <th>LevelingGuide</th>
                 </tr>
                 <tr>
                     <th> Weaver </th>
