routes, html, and friends.js created

--- a/Assignment1.html
+++ b/Assignment1.html
@@ -8,7 +8,7 @@
         <h1> These are the Crafters I have yet to get to 50 </h1>
         <img src="https://ffxiv.consolegameswiki.com/mediawiki/images/3/38/Disciples_of_hand1.jpg" alt="8 Disciplines_of_hand"/>
 
-            <table style="width255">
+            <table style="width25%">
                 <tr>
                     <th>Class</th>
                     <th> Current Level</th>
@@ -63,5 +63,5 @@
                 <li> Bard</li>
                 <li>Astrologian</li>
             </ul>
-            <embed width="420" height="315" src="https://www.youtube.com/watch?v=V0C5J5zhXNs&t"> Chaos Theme ff14
+            <iframe width="560" height="315" src="https://youtu.be/V0C5J5zhXNs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> Chaos Theme ff14</iframe>
 </html>
