--- a/TriviaRedux/index.html
+++ b/TriviaRedux/index.html
@@ -10,10 +10,18 @@
         </head>
 
         <body>
-
-            <script type = "text/javascript" src= "assets/javascript/app.js"></script>
-
-        
+            <div id = "wrapper">
+								<h1>Total Trivial Trivia</h1>
+								<div id = "subwrapper">
+									<div id = "quiz-screen">
+                                        <div id = "start">Start</div>
+                                        <div class= "questions">
+                                            
+                                        </div>
+									</div>
+								</div>
+            </div>
+            <script type = "text/javascript" src= "assets/javascript/game.js"></script>
         </body>
 </html>
 
